exports[`babel-jest instruments only specific files and collects coverage 1`] = `
"Using <<REPLACED>>, jasmine2, babel-jest
----------------------------|----------|----------|----------|----------|----------------|
File                        |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
----------------------------|----------|----------|----------|----------|----------------|
 this-directory-is-covered/ |    83.33 |      100 |       50 |    83.33 |                |
  covered.js                |    83.33 |      100 |       50 |    83.33 |             18 |
----------------------------|----------|----------|----------|----------|----------------|
All files                   |    83.33 |      100 |       50 |    83.33 |                |
----------------------------|----------|----------|----------|----------|----------------|

"
`;

exports[`no babel-jest instrumentation with no babel-jest 1`] = `
"Using <<REPLACED>>, jasmine2
----------------------------|----------|----------|----------|----------|----------------|
File                        |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
----------------------------|----------|----------|----------|----------|----------------|
 this-directory-is-covered/ |    83.33 |      100 |       50 |    83.33 |                |
  covered.js                |    83.33 |      100 |       50 |    83.33 |             18 |
----------------------------|----------|----------|----------|----------|----------------|
All files                   |    83.33 |      100 |       50 |    83.33 |                |
----------------------------|----------|----------|----------|----------|----------------|

"
`;
